# CodeNexus

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli_knowledge/: auth.py  categorizer.py  cli.py  repo_scanner.py  vectorizer.py
