[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli_knowledge"
version = "0.1.0"
description = "个人代码知识库 CLI 工具"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
uvx = "cli_knowledge.cli:main" 